-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.13.0-beta1
-
None
up to qtc-4.12 one could build the 'all' target via `cm all` via the locator. with qtc-4.13 this is not possible anymore.
my projects usually have many targets, where the "build steps" are configured to build the <Current executable>. if that is set, the only way to build the whole project, is to `cm all` in the locator. it would be great if the `all` (and also the `clean`) targets could be restored
For Gerrit Dashboard: QTCREATORBUG-24064 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
302750,2 | CMake: Inject special build targets into list of extracted targets | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |